// Vitest Snapshot v1

exports[`index > genOptionsMap 1`] = `
Map {
  "DEFAULT" => {
    "baseNameMatch": "*",
    "deep": Infinity,
    "exportAll": false,
  },
  "consts" => {
    "baseNameMatch": "*",
    "deep": Infinity,
    "exportAll": true,
  },
  "utils" => {
    "baseNameMatch": "expr??",
    "deep": 2,
    "exportAll": false,
  },
}
`;

exports[`index > getOptionsValue 1`] = `2`;

exports[`index > getOutputFilePaths 1`] = `
[
  "src/consts/index.js",
]
`;

exports[`index > getOutputFilePaths 2`] = `
[
  "src/consts/index.js",
  "src/utils/index.js",
]
`;

exports[`index > resolveDir 1`] = `
[
  "consts",
]
`;

exports[`index > resolveDir 2`] = `
[
  "consts",
]
`;

exports[`index > resolveDir 3`] = `
[
  "consts",
  "utils",
]
`;
